test/bad/managementSQL.java
package ParkingSystem.Service;



public class ParkingManagementSQL {

    private ParkingManagementSQL(){

    }



}
